fix: layout issues (#146)
1. hide tag's article count
2. better wrap user and date info

See #141, #142

--- a/addons/themes/theme-nexfoundation/src/scss/components/_articleList.scss
+++ b/addons/themes/theme-nexfoundation/src/scss/components/_articleList.scss
@@ -66,4 +66,12 @@ div.Meta.Meta-Discussion {
             margin-left: 5px;
         }
     }
+    div.break {
+        width: 100%;
+        height: 5px;
+        display: block;
+        @include md {
+            display: none;
+        }
+    }
 }
